--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
   "author": "Ian Boynton <iboynton@jwplayer.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "axios": "^0.19.0",
     "js-sha1": "^0.6.0",
-    "qs": "^6.9.0"
+    "node-fetch": "^2.6.0",
+    "qs": "^6.9.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.5"
   },
   "scripts": {
     "coverage": "nyc -r text -r lcov report",
