--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jwplatform",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Node.js library for the JWPlatform Management API",
   "repository": {
     "type": "git",
@@ -28,9 +28,10 @@
   "author": "Ian Boynton <iboynton@jwplayer.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "axios": "^0.19.0",
     "js-sha1": "^0.6.0",
-    "qs": "^6.9.0"
+    "qs": "^6.9.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.5"
   },
   "scripts": {
     "coverage": "nyc -r text -r lcov report",
