--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jwplatform",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Node.js library for the JWPlatform Management API",
   "repository": {
     "type": "git",
@@ -31,7 +31,8 @@
     "js-sha1": "^0.6.0",
     "qs": "^6.9.0",
     "request": "^2.88.0",
-    "request-promise": "^4.2.5"
+    "request-promise": "^4.2.5",
+    "y18n": "^4.0.1"
   },
   "scripts": {
     "coverage": "nyc -r text -r lcov report",
